[package]
name = "kouba_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
rocket = "0.5.0-rc.2"
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
